# arras

./: Makefile  README.md  arras.py  example.json  pyproject.toml  requirements.txt  test_out.glm  test_out.json
docs/: gld_pypower.html  index.html
gld_pypower/: Makefile  example.glm  example.json  gld_pypower.py  gridlabd.json  pyproject.toml  requirements.txt  test_out.glm  test_out.json
gld_pypower/docs/: index.html
gld_pypower/test/: __init__.py
