[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qdox = ["*.py","*.css"]

[project]
name = "gld_pypower"
version = "0.0.0a0"
description = "Arras Energy GridLAB-D PyPower API"
authors = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
maintainers = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = ["numpy","cvxpy","pypower"]
keywords = ["github","python","energy","arras","gridlabd","pypower"]
license = {text="MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    ]

[project.urls]
Homepage = "https://github.com/eudoxys/arras"
Documentation = "https://www.eudoxys.com/arras"
Repository = "https://github.com/eudoxys/arras.git"
Issues = "https://github.com/eudoxys/arras/issues"

[project.scripts]
gld_pypower = "gld_pypower:main"
